fix image spacing

--- a/style.css
+++ b/style.css
@@ -33,7 +33,10 @@ h2 {
 }
 
 #bio-image {
-    border-image-width: 200px;
+    clear: both;
+    overflow: auto;
+    width: 200px;
+    height: auto;
     margin: 20px;
 }
 
